adding delete functionality