@@ -19,6 +19,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -200,7 +201,8 @@ public class CourseService implements CourseServiceInt {
 
 
     @Transactional
-    public boolean deletSummaryFromCourse(Long courseId,Long summaryId){
+    public boolean deleteSummaryFromCourse(Long courseId,Long summaryId){
+
         Course course =this.getCourseById(courseId);
         int index = 0;
         List<Summary> summaries=course.getSummaries();
@@ -241,14 +243,19 @@ public class CourseService implements CourseServiceInt {
 
 
     public boolean deleteRatingFromCourse(Long courseId,Long ratingId){
+        System.out.println("REACHING HERE");
         Rating rating =ratingService.getRatingById(ratingId);
+        System.out.println(rating);
         User connectedUser=userService.getConnectedUser();
-        if(rating.getOwner().getEmail()!=connectedUser.getEmail()){
+
+
+        if(!Objects.equals(rating.getOwner().getEmail(), connectedUser.getEmail())){
             throw new UnauthorizedActionException("you can not delete rating that you dont own");
         }
-
+        System.out.println(connectedUser);
+        System.out.println(rating.getOwner());
         Course course=getCourseById(courseId);
-        course.setRating(course.getRating().stream().filter(rating1 -> rating1.getRatingId()!=ratingId).toList());
+        course.setRating(course.getRating().stream().filter(rating1 -> !Objects.equals(rating1.getRatingId(), ratingId)).collect(Collectors.toList()));
         courseRepo.save(course);
         ratingService.deleteRating(ratingId);
         return true;
